default/objects/Call_Center_Speed_Up__c/Call_Center_Speed_Up__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Call Center Speed Up</label>
</CustomObject>