default/objects/Call_Center_Speed_Up__c/fields/BigClient_liters__c.field-meta.xml
<CustomField>
    <fullName>BigClient_liters__c</fullName>
    <label>BigClient_liters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>