default/objects/Call_Center_Speed_Up__c/fields/BigClient_rubles__c.field-meta.xml
<CustomField>
    <fullName>BigClient_rubles__c</fullName>
    <label>BigClient_rubles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>