default/objects/Call_Center_Speed_Up__c/fields/CC_Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>CC_Team_Leader__c</fullName>
    <label>CC Team Leader</label>
    <length>20</length>
    <type>Text</type>
</CustomField>