default/objects/Call_Center_Speed_Up__c/fields/repUsersIds__c.field-meta.xml
<CustomField>
    <fullName>repUsersIds__c</fullName>
    <label>repUsersIds</label>
    <length>100</length>
    <type>Text</type>
</CustomField>