default/objects/Call_Center_Speed_Up__c/fields/specificOppOwners__c.field-meta.xml
<CustomField>
    <fullName>specificOppOwners__c</fullName>
    <label>specificOppOwners</label>
    <length>100</length>
    <type>Text</type>
</CustomField>