default/objects/Call_Center_Speed_Up__c/fields/User_for_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>User_for_Reassignment__c</fullName>
    <label>User_for_Reassignment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>